--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "GithubClient"
+name = "github-token-app"
 version = "0.1.0"
-edition = "2018"
+edition = "2021"
 
 [dependencies]
-reqwest = "0.12.15"
-serde = "1.0.219"
-serde_json = "1.0.140"
-tokio = "1.44.1"
+tokio = { version = "1.29.0", features = ["full"] }
+reqwest = { version = "0.11.18", features = ["json"] }
+serde = { version = "1.0.164", features = ["derive"] }
+serde_json = "1.0.97"
